[package]
name = "double-ratchet"
version = "0.1.0"
authors = [""]
edition = "2021"
description = "Double Ratchet key management for exchanging encrypted messages between two parties."
repository = ""
# readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = ""

[dependencies]
rand_core = "0.4"
hashbrown = "0.1"

[dev-dependencies]
aes = "0.9.0-pre.2"
cbc = "0.1.2"
# block-modes = "0.3"
clear_on_drop = "0.2"
generic-array = "1.1.1"
hkdf = "0.7"
hmac = "0.7"
rand_os = "0.1"
sha2 = "0.8"
subtle = "2"
x25519-dalek = "0.5"

[features]
default = ["std"]
std = []
test = []


