[package]
name = "ksi-double-ratchet"
version = "0.1.2"
authors = ["D.N. Korenev <https://github.com/Kseen715>, S.R. Verschoor <sebastian@zeroknowledge.me>"]
edition = "2021"
description = "Double Ratchet key management for exchanging encrypted messages between two parties."
repository = "https://github.com/Kseen715/double-ratchet"
readme = "README.md"
keywords = ["double-ratchet", "forward-secrecy", "future-secrecy"]
categories = ["cryptography", "no-std"]
license = "BSD-3-Clause"

[dependencies]
rand_core = "0.4"
hashbrown = "0.1"

[dev-dependencies]
aes = "0.8.4"
cipher = "0.4.4"
cbc = "0.1.2"
block-padding = "0.3.3"
clear_on_drop = "0.2"
hkdf = "0.12.4"
hmac = "0.12.1"
rand_os = "0.1"
sha2 = "0.10.8"
subtle = "2.6.1"
x25519-dalek = "0.5"
crypto = "0.5.1"
generic-array = "0.14"

[features]
default = ["std"]
std = []
test = []


